--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,18 @@
+h1 {
+  font-weight: bold;
+  font-size: 26px;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 14px;
+}
+
 body {
   font-family: 'Courier New', Courier, monospace;
   background-image: url("../images/1.jpg");
@@ -9,10 +24,9 @@ body {
 #rightside {
   float: right;
   width: 50%;
-}
-
-main {
-  background: rgba(60, 60, 60, 0.60);
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 header {
@@ -36,6 +50,7 @@ a:hover {
 
 #headertop {
   padding: 5px;
+  height: 3%;
 }
 
 #headertop h1 {
@@ -57,6 +72,7 @@ nav ul {
   justify-content: space-between;
   align-items: center;
   padding: 5px 80px;
+  height: 2%;
 }
 
 
@@ -66,6 +82,9 @@ header nav li{
 
 main {
   padding: 10px;
+  background: rgba(60, 60, 60, 0.60);
+  font-size: 12px;
+  height: 80%;
 }
 
 main h2{
@@ -79,9 +98,9 @@ main h2{
 
 #mainbottom {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 200px;;
 }
 
 figure {
@@ -93,11 +112,12 @@ figure img {
   width: 200px;
   height: 150px;
   border: 1px solid #A44200ff;
+  margin-top: 5px;
 }
 
 footer {
   background: rgba(60, 60, 60, 0.60);
   padding: 10px;
-  font-size: 10px;
-  margin-bottom: 0;
+  font-size: 12px;
+  height: 5%;
 }
